--- a/management/package.json
+++ b/management/package.json
@@ -10,6 +10,7 @@
     "animate.css": "^4.1.1",
     "core-js": "^3.8.3",
     "vue": "^2.6.14",
+    "vue-cli": "^2.9.6",
     "vue-router": "^3.5.1",
     "vuex": "^3.6.2"
   },
